--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="slider-container">
+      <h1>My crousel</h1>
       <div
         class="slide active"
         style="
