--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Background Slider</title>
   </head>
   <body>
-    <h1>My crousel</h1>
+    <h1>My crousel for the project</h1>
     <div class="slider-container">
      
       <div
